--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,5 +10,25 @@
         android:id="@+id/tvHomePlaceHolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Home" />
+        android:text="PlayerName"
+        android:textSize="25dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_horizontal"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="339dp"
+        android:layout_height="500dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="+ Start a New Game"
+        android:textSize="20dp"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="@color/redPlayer"
+        android:layout_marginTop="600dp"/>
+
 </FrameLayout>
