--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
 
     <color name="darkBg">#3C3B66</color>
     <color name="darkBox">#4B5292</color>
+    <color name="finalDarkBg">#222577</color>
+    <color name="darkGround">#131660</color>
 </resources>
