--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.HomeFragment">
+    tools:context=".Fragments.HomeFragment"
+    android:background="@color/finalDarkBg">
 
     <TextView
         android:id="@+id/playerName"
@@ -11,6 +12,7 @@
         android:layout_height="match_parent"
         android:text="PlayerName"
         android:textSize="25dp"
+        android:textColor="@color/white"
         android:layout_marginTop="20dp"
         android:gravity="center_horizontal"/>
 
@@ -18,7 +20,7 @@
         android:layout_width="339dp"
         android:layout_height="500dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="65dp"/>
+        android:layout_marginTop="65dp" />
 
     <Button
         android:id="@+id/btnStartGame"
