--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:text="+ Start a New Game"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_gravity="center_horizontal"
         android:backgroundTint="@color/redPlayer"
         android:layout_marginTop="600dp"/>
