--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,5 +32,12 @@
         android:layout_gravity="center_horizontal"
         android:backgroundTint="@color/redPlayer"
         android:layout_marginTop="600dp"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="344dp"
+        android:layout_height="496dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/dotsandboxeslogomain" />
 
 </FrameLayout>
