Theme update > set primary: 	window color, text color, font family
Game player update
> background for avatars

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@
     <color name="darkBox">#4B5292</color>
     <color name="finalDarkBg">#222577</color>
     <color name="darkGround">#131660</color>
+    <color name="iconNight">#FFFFFF</color>
+    <color name="textNight">#FFFFFF</color>
 </resources>
