--- a/app/src/main/res/layout/dialog_help.xml
+++ b/app/src/main/res/layout/dialog_help.xml
@@ -1,28 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent" android:paddingLeft="16dp" android:paddingRight="16dp" android:background="@color/finalDarkBg">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/finalDarkBg"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent">
 
-    <View
-        android:layout_width="40dp"
+    <ImageView
+        android:id="@+id/close_corner"
+        android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/ic_corner" />
+        android:background="@drawable/ic_corner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/btn_close"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="6dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="close"
         android:src="@drawable/ic_close"
-        app:tint="@color/white" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001">
 
 
         <TextView
@@ -30,12 +49,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/abel"
             android:paddingTop="24dp"
-
             android:paddingBottom="24dp"
             android:text="How to Play"
-            android:textColor="@color/white"
             android:textSize="30sp" />
 
         <TextView
@@ -43,13 +59,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:fontFamily="@font/abel"
             android:paddingLeft="24dp"
             android:paddingTop="24dp"
             android:paddingBottom="30dp"
-
             android:text="Rules:"
-            android:textColor="@color/white"
             android:textSize="25sp" />
 
         <TextView
@@ -57,14 +70,11 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/abel"
             android:gravity="left"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
             android:paddingBottom="15dp"
-
             android:text="1. Take turns drawing lines between the dots."
-            android:textColor="@color/white"
             android:textSize="20dp" />
 
         <TextView
@@ -72,14 +82,11 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/abel"
             android:gravity="left"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
             android:paddingBottom="15dp"
-
             android:text="2. Complete a box by drawing its fourth wall."
-            android:textColor="@color/white"
             android:textSize="20dp" />
 
         <ImageView
@@ -97,14 +104,11 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/abel"
             android:gravity="left"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
-
             android:paddingBottom="10dp"
             android:text="3. You take another turn after completing a box."
-            android:textColor="@color/white"
             android:textSize="20dp" />
 
         <TextView
@@ -112,15 +116,12 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:fontFamily="@font/abel"
             android:gravity="left"
             android:paddingStart="24dp"
             android:paddingTop="30dp"
             android:paddingEnd="24dp"
             android:paddingBottom="30dp"
-
             android:text="Goal:"
-            android:textColor="@color/white"
             android:textSize="25dp" />
 
         <TextView
@@ -128,14 +129,13 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:fontFamily="@font/abel"
             android:gravity="left"
             android:paddingStart="24dp"
-
             android:paddingEnd="24dp"
             android:text="Player with most boxes at the end of the game wins."
-            android:textColor="@color/white"
             android:textSize="20dp" />
 
     </LinearLayout>
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
