--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -22,57 +22,80 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.206" />
 
-        <ImageView
-            android:id="@+id/ivP1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="64dp"
-            android:src="@drawable/ic_p_icon_baby"
-            app:layout_constraintBottom_toTopOf="@+id/divider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/ivP2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="64dp"
-            android:src="@drawable/ic_p_icon_boy_with_bangs"
-            app:layout_constraintBottom_toTopOf="@+id/divider"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/ivP1BG"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="48dp"
+            android:layout_marginBottom="3dp"
+            android:backgroundTint="@color/redPlayer"
+            app:cardCornerRadius="50dp"
+            app:layout_constraintBottom_toTopOf="@+id/tvP1Name"
+            app:layout_constraintEnd_toStartOf="@+id/tvP1Score"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/ivP1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_p_icon_baby" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/ivP2BG"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="48dp"
+            android:layout_marginBottom="3dp"
+            android:backgroundTint="@color/bluePlayer"
+            app:cardCornerRadius="50dp"
+            app:layout_constraintBottom_toTopOf="@+id/tvP2Name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tvP2Score"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/ivP2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_p_icon_boy_with_bangs" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tvP1Score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginTop="71dp"
+            android:layout_marginBottom="61dp"
             android:text="0"
             app:layout_constraintBottom_toTopOf="@+id/divider"
-            app:layout_constraintStart_toEndOf="@+id/ivP1"
+            app:layout_constraintEnd_toStartOf="@+id/tvHyphen"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/ivP1BG"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvP2Score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="71dp"
+            android:layout_marginBottom="61dp"
             android:text="0"
             app:layout_constraintBottom_toTopOf="@+id/divider"
-            app:layout_constraintEnd_toStartOf="@+id/ivP2"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tvHyphen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-"
-            app:layout_constraintBottom_toTopOf="@+id/divider"
-            app:layout_constraintEnd_toStartOf="@+id/tvP2Score"
+            app:layout_constraintEnd_toStartOf="@+id/ivP2BG"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/tvP1Score"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.492" />
+            app:layout_constraintStart_toEndOf="@+id/tvHyphen"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.example.dotsboxes.Views.GameView
             android:id="@+id/gameView"
@@ -80,7 +103,6 @@
             android:layout_height="0dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
-            android:background="@color/white"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/btnPlayAgain"
             app:layout_constraintEnd_toEndOf="parent"
@@ -92,31 +114,51 @@
             android:id="@+id/tvP1Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="24dp"
             android:text="TextView"
-            app:layout_constraintStart_toStartOf="@+id/ivP1"
-            app:layout_constraintTop_toBottomOf="@+id/ivP1" />
+            app:layout_constraintBottom_toTopOf="@+id/divider"
+            app:layout_constraintEnd_toEndOf="@+id/ivP1BG"
+            app:layout_constraintHorizontal_bias="0.636"
+            app:layout_constraintStart_toStartOf="@+id/ivP1BG"
+            app:layout_constraintTop_toBottomOf="@+id/ivP1BG" />
 
         <TextView
             android:id="@+id/tvP2Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/ivP2"
-            app:layout_constraintTop_toBottomOf="@+id/ivP2" />
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="24dp"
+            android:text="TextView2"
+            app:layout_constraintBottom_toTopOf="@+id/divider"
+            app:layout_constraintEnd_toEndOf="@+id/ivP2BG"
+            app:layout_constraintHorizontal_bias="0.636"
+            app:layout_constraintStart_toStartOf="@+id/ivP2BG"
+            app:layout_constraintTop_toBottomOf="@+id/ivP2BG" />
 
         <TextView
             android:id="@+id/tvCurrentTurn"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
+            android:layout_marginTop="16dp"
             android:text="TextView"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/tvHyphen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvHyphen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            app:layout_constraintBottom_toTopOf="@+id/divider"
+            app:layout_constraintEnd_toStartOf="@+id/tvP2Score"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tvP1Score"
+            app:layout_constraintTop_toBottomOf="@+id/tvCurrentTurn"
+            app:layout_constraintVertical_bias="0.246" />
 
         <Button
             android:id="@+id/btnPlayAgain"
