--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:background="@color/finalDarkBg">
 
     <TextView
-        android:id="@+id/playerName"
+        android:id="@+id/tvPlayerName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="PlayerName"
