--- a/app/src/main/res/layout/new_user.xml
+++ b/app/src/main/res/layout/new_user.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLetsPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lets_play"
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:textSize="18sp"
         android:text="@string/new_user"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btnLetsPlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
